@@ -4,6 +4,11 @@
   * Sticky edit page now contains:
     * Group description if the sticky is part of a group
     * Comments that may have been added to sticky
+  * Stickies on the sticky list page can now be filtered by:
+    * Project
+    * Assigned To
+    * Due Date
+    * Status
 
 == 0.13.0
 
